security/podsecurity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-demo
  namespace: assettrack
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: demo
    image: 192.168.3.236/library/nginx
    securityContext:
      allowPrivilegeEscalation: false
